Preserve last passing candidate for com.nimbusds:nimbus-jose-jwt:4.0